ingress/ht-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ht-dep
  labels:
    app: ht-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ht-dep
  template:
    metadata:
      labels:
        app: ht-dep
    spec:
      containers:
      - name: c1
        image: httpd
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ht-serv
spec:
  selector:
    app: ht-dep
  ports:
  - port: 80
    targetPort: 80
