ingress/ng-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ng-dep
  labels:
    app: ng-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ng-dep
  template:
    metadata:
      labels:
        app: ng-dep
    spec:
      containers:
      - name: c1
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ng-serv
spec:
  selector:
    app: ng-dep
  ports:
  - port: 8080
    targetPort: 80
