ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: "/n"
        pathType: Prefix
        backend:
          service:
            name: ng-serv
            port:
              number: 8080
      - path: "/h"
        pathType: Prefix
        backend:
          service:
            name: ht-serv
            port:
              number: 80
